Fix preset chooser's thumbnail size slider only reacting to dragging

There are other means to manipulate the slider, including mouse wheel
and cursor keys.
Connect the update to the valueChanged signal instead, and saving the
value to config file when the menu gets hidden.

Also fix slider getting out of sync between chooser instances.

BUG:450667