libs/ui/widgets/kis_paintop_presets_chooser_popup.h
@@ -35,6 +35,7 @@ Q_SIGNALS:
 private Q_SLOTS:
     void slotThumbnailMode();
     void slotDetailMode();
+    void slotUpdateMenu();
     void paintEvent(QPaintEvent *) override;
    
 private:
